--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8"/>
-    <link rel="stylesheet" href="../dist/main.css">
+    <link rel="stylesheet" href="main.css"> 
   </head>
   <body>
     <h1>Listify</h1>
