Update file pathing

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <div id='content'></div>
     </div>
     <div id='sideBar'>
-      <button id='today' class='buttonLinks'><img src='/src/calendar.svg' class='icons' id='todayIcon'>Today</button>
-      <button id='projects' class='buttonLinks'><img src='/src/briefing.svg' class='icons'>Projects</button>
+      <button id='today' class='buttonLinks'><img src='calendar.svg' class='icons' id='todayIcon'>Today</button>
+      <button id='projects' class='buttonLinks'><img src='briefing.svg' class='icons'>Projects</button>
     </div>
 
     <div id='formHolder'>
